# dataforge-parser-rust

./: Cargo.toml  README.md
examples/: create-message.rs  parse-header.rs  parse-message.rs  parse-meta-only.rs
resources/test/: df01-point.df
src/: lib.rs
