[package]
name = "dataforge"
version = "0.1.3"
edition = "2021"

[dependencies]
serde = "1.0.163"

serde_json = "1.0.91"
byteorder = "1.4.3"

tokio = { version = "1.25.0", features = ["io-util"], optional = true } 

[dev-dependencies]
tokio = { version = "1.25.0", features = ["io-util", "fs", "rt-multi-thread", "macros"] } 

[features]
tokio = ["dep:tokio"]
